# standard-ip.com

./: .editorconfig  Cargo.toml  README.md
deploy/: hosts.yml  site.yml
deploy/roles/app/defaults/: main.yml
deploy/roles/app/handlers/: main.yml
deploy/roles/app/tasks/: app.yml  caddy.yml  firewall.yml  main.yml
deploy/roles/app/templates/: Caddyfile.j2  app.service.j2
deploy/roles/base/defaults/: main.yml
deploy/roles/base/files/: .bashrc
deploy/roles/base/handlers/: main.yml
deploy/roles/base/tasks/: chrony.yml  main.yml  user.yml
deploy/roles/base/templates/: chrony.conf.j2
deploy/roles/shared/defaults/: main.yml
deploy/roles/shared/handlers/: main.yml
deploy/roles/ssh/defaults/: main.yml
deploy/roles/ssh/tasks/: main.yml  moduli.yml
deploy/roles/ssh/templates/: firewalld.ssh.xml.j2  sshd_config.j2
src/: main.rs
