[package]
name = "standardip"
version = "0.1.0"
authors = ["Denis Brodbeck <go.github@darker.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.11.0"
async-std = { version = "1.6", features = ["default"] }
http-types = "2.2.1"
serde = "1.0.114"
serde_json = "1.0"
